page not found modal and services

--- a/src/app/devices/devices.component.html
+++ b/src/app/devices/devices.component.html
@@ -1,10 +1,13 @@
+
+<div class="container mt-5 pt-3">
+
+</div>
 <div class="container mt-5 pt-3">
 
 </div>
 <div class="row">
   <div class="form-group">
     <button class="btn btn-primary">Add Device</button>
-    <button class="btn btn-primary">Add User</button>
   </div>
 </div>
 <div class="container mt-5 pt-3">
@@ -87,7 +90,7 @@
       <!-- Card image -->
       <!-- Card content -->
       <div class="card-body">
-        
+
 
         <!-- Category & Title -->
         <h5 class="card-title mb-1"><strong><a href="" class="dark-grey-text">Phone</a></strong></h5><span class="badge badge-info mb-2"></span>
@@ -96,7 +99,7 @@
             <a href="" class="dark-grey-text">Status: {{amount}}</a>
           </strong>
         </h5>
-        
+
         <!-- Card footer -->
         <div class="card-footer pb-0">
           <div class="form-group">
@@ -128,11 +131,8 @@
 
         <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/3.jpg" class="img-fluid"
              alt="">
-
         <a>
-
           <div class="mask rgba-white-slight"></div>
-
         </a>
 
       </div>
@@ -147,7 +147,7 @@
             <a href="" class="dark-grey-text">Status: {{amount}}</a>
           </strong>
         </h5>
-        
+
         <!-- Card footer -->
         <div class="card-footer pb-0">
           <div class="form-group">
@@ -171,3 +171,4 @@
 
 </div>
 <!-- Grid row -->
+
