--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,3 +1,14 @@
+<div class="container mt-5 pt-3">
+
+</div>
+<div class="container mt-5 pt-3">
+
+</div>
+<div class="row">
+  <div class="form-group">
+    <button class="btn btn-primary">Add User</button>
+  </div>
+</div>
 <!-- Grid row -->
 <div class="row">
   <!-- Grid column -->
@@ -26,7 +37,7 @@
             <a href="" class="dark-grey-text">Ether Account Balance: {{balance}}</a>
           </strong>
         </h5>
-        
+
         <!-- Card footer -->
         <div class="card-footer pb-0">
           <div class="form-group">
