--- a/src/app/devices/devices.component.html
+++ b/src/app/devices/devices.component.html
@@ -53,7 +53,7 @@
         <div class="card-footer pb-0">
           <div class="form-group">
             <div class="row mb-0">
-              <button (click)="goBuy()" class="btn btn-success">Activate</button>
+              <button (click)="login()" class="btn btn-success">Activate</button>
             </div>
             <div class="row mb-0">
               <button (click)="goBuy()" class="btn btn-danger">Deactivate</button>
