--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -27,7 +27,7 @@
               <p>Owner</p>
             </td>
             <td>
-              <ion-button (click)="goToOwnerRole()">Edit Permissions</ion-button>
+              <ion-button (click)="goToOwnerRole()">Edit Owner Permissions</ion-button>
             </td>
           </tr>
           <tr>
@@ -35,7 +35,7 @@
               <p>Guest</p>
             </td>
             <td>
-              <ion-button (click)="goToGuestRole()">Edit Permissions</ion-button>
+              <ion-button (click)="goToGuestRole()">Edit Guest Permissions</ion-button>
             </td>
           </tr>
         </table>
