--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -17,7 +17,7 @@
       <ion-button color="primary" (click)="logout()">Logout</ion-button>
     </div>
   </div>
-  <div class="row">
+  <div class="row" *ngIf="isAdmin">
     <div>
       <h1>System Roles</h1>
       <div>
