--- a/src/app/pages/add-device/add-device.page.html
+++ b/src/app/pages/add-device/add-device.page.html
@@ -1,28 +1,45 @@
-<ion-header translucent>
+<ion-header>
   <ion-toolbar>
-    <ion-title>Add Device</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="devices"></ion-back-button>
+    </ion-buttons>
+    <ion-title>
+      Add New Device
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  <div class="row">
-    
-    <div class="form-group">
-      <ion-button color="primary" (click)="goBack()">Back</ion-button>
-    </div>
-  </div>
   <form #form="ngForm" (ngSubmit)="add_device(form)">
+    <div class="imgcontainer">
+      <img src="../../../assets/img/iot.png" alt="Avatar" class="avatar">
+    </div>
     <ion-grid>
       <ion-row justify-content-center>
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
           
           <div padding>
             <ion-item>
-              <ion-input name="deviceName" type="text" placeholder="device name" ngModel required></ion-input>
+              <ion-input name="deviceName" type="text" placeholder="device name" class="form-control" ngModel required>
+              </ion-input>
             </ion-item>
             <ion-item>
-              <ion-input name="ip" type="text" placeholder="IP Address" ngModel required></ion-input>
+              <ion-input name="ip" type="text" placeholder="IP Address" class="form-control" ngModel required>
+              </ion-input>
             </ion-item>
+          </div>
+          <div padding>
+            <p>Users Allowed:</p>
+            <div class="">
+              <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-secondary">
+                  <input type="radio" name="role" value="owner" ngModel> Owner
+                </label>
+                <label class="btn btn-secondary">
+                  <input type="radio" class="form-control-input" name="role" value="guest" checked ngModel> Guest
+                </label>
+              </div>
+            </div>         
           </div>
           <div padding>
             <ion-button size="large" type="submit" [disabled]="form.invalid" expand="block">Add Device</ion-button>
