--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,4 +1,4 @@
-<ion-content color="primary" padding>
+<!--<ion-content color="primary" padding>
   <form #form="ngForm" (ngSubmit)="login(form)">
     <ion-grid>
       <ion-row color="primary" justify-content-center>
@@ -20,5 +20,28 @@
         </ion-col>
       </ion-row>
     </ion-grid>
+  </form>
+</ion-content>-->
+
+<ion-content>
+  <form #form="ngForm" (ngSubmit)="login(form)">
+    <h1 class="text-center">
+      Welcome
+    </h1>
+    <div class="imgcontainer">
+      <img src="../../../assets/img/img_avatar2.png" alt="Avatar" class="avatar">
+    </div>
+
+    <div class="container">
+      <label for="uname"><b>Username</b></label>
+      <ion-input type="text" class="form-control" placeholder="Enter Username" name="username" ngModel required></ion-input>
+
+      <label for="psw"><b>Password</b></label>
+      <ion-input type="password" class="form-control" placeholder="Enter Password" name="password" ngModel required>
+      </ion-input>
+
+      <ion-button type="submit" expand="block" size="large" [disabled]="form.invalid">Login</ion-button>
+
+    </div>
   </form>
 </ion-content>
